src/objects/vlocity_ins__QuoteLineItemRelationship__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The action desired for this relationship with values of Add, Delete or Existing. Existing means no change is requested. Add is a request to add the relationship. Delete is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductRelationshipIdentifier__c</fullName>
        <description>Identifies the Product Relationship that is realized by this Quote Product Relationship</description>
        <label>Product Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Product Relationships</relationshipLabel>
        <relationshipName>QuoteLineItemRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Product</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Product Relationships</relationshipLabel>
        <relationshipName>QuoteLineItemRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedAssetReferenceId__c</fullName>
        <description>Identifies the Asset Reference Id of an item or asset that this item is related to. Used instead of RelatedQuoteLineItemId__c when the related asset is not a line item in this quote.</description>
        <externalId>true</externalId>
        <label>Related Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedQuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Quote Product</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Product Relationships (Related Quote Product)</relationshipLabel>
        <relationshipName>RelatedQuoteLineItemRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Reassignment</fullName>
                </value>
                <value>
                    <fullName>Movement</fullName>
                </value>
                <value>
                    <fullName>ReliesOn</fullName>
                    <label>Relies On</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Product Relationship</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>